--- a/lib/presentation/windows/shell.glade
+++ b/lib/presentation/windows/shell.glade
@@ -1,16 +1,17 @@
-<?xml version="1.0"?>
-<interface>
+<?xml version="1.0" encoding="UTF-8"?>
+<glade-interface>
+  <requires lib="gtk+" version="2.24"/>
   <!-- interface-naming-policy project-wide -->
   <object class="GtkWindow" id="window">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">GTK+ Text Editor</property>
-    <signal handler="shutdown" name="destroy" swapped="no"/>
+    <signal name="destroy" handler="on_window_destroy" swapped="no"/>
     <child>
       <object class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
-          <object class="GtkMenuBar" id="menubar1">
+          <object class="GtkMenuBar" id="menubar">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
@@ -196,4 +197,4 @@
       </object>
     </child>
   </object>
-</interface>
+</glade-interface>
